css/main.css
* {
  padding: 0;
  margin: 0;
}

html, body {
  height: 100%;
}

body {
    background-color: #002900 !important;
    background: url("../images/veg.jpg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
}

hr {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
    background: #999;
}


.contact-button {
  cursor: pointer; !important
}

#selector-div {
    background-color: rgba(0, 41, 0, 0.95);
    padding-top: 7rem;
    width: 100%;
    max-width: 1000px;
    margin: auto;
    font-family: 'Merriweather Sans'
}

#selector {
    margin-left: 4%;
}

#logo-full, #veg, #vis, .dropdown-item, .nav-link {
  cursor: pointer;
}

.content {
    background-color: rgba(0, 41, 0, 0.95);
    width: 100%;
    max-width: 1000px;
    color: #fffdd0;
    padding: 4%;
    margin: auto;
    font-family: "Merriweather Sans", sans-serif;
    text-justify: newspaper;
    z-index: 0;
}

#homepage-content {
  padding-top: 6rem;
  padding-bottom: 0.01rem;
  min-height: 100vh;
  font-size: 0.8em;
}

#contact-content {
  padding-top: 5.5rem;
  min-height: 100vh;
  margin: auto;
  font-size: 0.8em;
}

#region-content h1 {
  font-family: 'Satisfy';
  font-size: 3.5em;
  margin-left: 0.5rem;
}

#contact-link {
  font-family: "Merriweather Sans", sans-serif;
  color: #fffdd0;
  border-bottom: 1px white dotted;
}

section h2 {
    font-family: 'Satisfy', cursive;
    font-size: 3em;
    color: lightgreen;
    margin-bottom: 3%;
    margin-left: 0.5rem;
}

section a {
    color: green;
}

section a:hover {
    color: lightgreen;
    text-decoration: none;
}

section h4 {
  margin-bottom: 1rem;
  margin-left: 0.5rem;
}

.phone-number {
  color: rgb(0, 41, 0);
}

.phone-number:hover {
  color: inherit;
}

.accommodation {
    display: block;
    transition: display 0.5s ease-in-out;
}

.entry {
    background-color: #fffdd0;
    color: rgb(0, 41, 0);
    margin-bottom: 3%;
    padding: 2%;
    border: solid 2px lightgreen;
    border-radius: 1rem;
}

.description {
    font-size: 0.8em;
}

.accom-photo {
    width: 100%;
    max-width: 483px;
    margin-top: 1%;
    margin-bottom: 3%;
    border-radius: 0.5rem;
}

.restaurant-photo {
    width: 100%;
    max-width: 633px;
    margin-top: 1%;
    margin-bottom: 3%;
    border-radius: 0.5rem;
}

.region-photo {
    width: 100%;
    max-width: 311px;
    float: left;
    margin: 1% 3% 3% 0%;

}

.code-explanation {
  position: relative;
  display: inline-block;
  border: 0px;
  border-bottom: 1px dotted black;
  background-color: inherit;
}

.code-explanation .code-definition-text {
  visibility: hidden;
  width: 10rem;
  background-color: #092807;
  color: #fff;
  font-size: 0.8em;
  text-align: left;
  border: solid 2px darkgreen;
  border-radius: 6px;
  padding: 10px;

  position: absolute;
  z-index: 1;
  top: 23px;
  margin-left: -2rem;
}

.code-explanation:hover .code-definition-text {
  visibility: visible;
}

.code-explanation .code-definition-text::after {
    content: " ";
    position: absolute;
    bottom: 100%;  /* At the top of the tooltip */
    left: 20%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent darkgreen transparent;
}

.green-code {
  color: green;
}

#footer {
    padding-top: 0;
    margin-bottom: 1.5%;
    margin-top: -1.5%;
    font-size: 0.6em;
    color: #fffdd0;
}

